--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <li class="layer" data-depth="0.20">
                     <div class="title">
                         <h2>
-                            IMMINENT
+                            Orchid Plexus
                         </h2>
                         <span class="line"></span>
                     </div>
@@ -84,13 +84,9 @@
 
                 <li class="layer" data-depth="0.30">
                     <div class="hero">
-                        <h1 id="countdown">
-                            The most spectacular coming soon template!
+                        <h1 >
+                            Coming Soon
                         </h1>
-
-                        <p class="sub-title">
-                            The most spectacular coming soon template!
-                        </p>
                     </div>
                 </li>
                 <!-- Flakes -->
@@ -156,21 +152,7 @@
 
                 <li class="layer" data-depth="0.20">
                     <div class="contact">
-                        <ul class="icons">
-                            <li>
-                                <a class="behance" href="#"><i class="fa fa-behance"></i></a>
-                            </li>
-
-                            <li>
-                                <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-
-                            <li>
-                                <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
-                            </li>
-                        </ul>
-                        Theme by <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-                        <a class="mail" href="mailto:info@example.com?subject=Hi%20ThemeWagon!">info@example.com</a>
+                        Assembled with creativity by Simon Poudyal
                     </div>
                 </li>
             </ul>
