--- a/index.html
+++ b/index.html
@@ -7,24 +7,20 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Imminent - The most spectacular coming soon template!
+        Simon Creations - Coming Soon
     </title><!-- Behavioral Meta Data -->
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Core Meta Data -->
-    <meta content="ThemeWagon" name="author">
-    <meta content="The most spectacular coming soon template!" name="description">
-    <meta content="Comming Soon, Responsive, Landing Page, One Page" name="keywords"><!-- Open Graph Meta Data -->
+    <meta content="SimonCreations" name="author">
+    <meta content="Simon Creations - Coming Soon!" name="description">
+    <meta content="Simon Creations - Coming Soon" name="keywords"><!-- Open Graph Meta Data -->
     <meta content="The most spectacular coming soon template!">
-    <meta content="ThemeWagon">
-    <meta content="ThemeWagon">
+    <meta content="SimonCreations">
+    <meta content="Simon Creations">
     <meta content="website">
     <meta content="index.html"><!-- Twitter Card Meta Data -->
-    <meta content="summary" name="twitter:card">
-    <meta content="@themewagon" name="twitter:site">
-    <meta content="@themewagon" name="twitter:creator">
-    <meta content="ThemeWagon" name="twitter:title">
-    <meta content="Imminent - The most spectacular coming soon template!" name="twitter:description">
+    <meta content="Simon Creations - Coming Soon " name="twitter:description">
 
     <link href="favicon.png" rel="shortcut icon" type="image/png">
 
