--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Coming Soon | Orchid Plexus
+            Coming Soon | Simon Poudyal
         </title><!-- Behavioral Meta Data -->
         <meta content="yes" name="apple-mobile-web-app-capable">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"><!-- Core Meta Data -->
@@ -54,7 +54,7 @@
                 <li class="layer" data-depth="0.20">
                     <div class="title">
                         <h2>
-                            Orchid Plexus
+                            Simon Poudyal
                         </h2>
                         <span class="line"></span>
                     </div>
